--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,20 +1,59 @@
+/* HomePage.css */
+
 .home-page {
     text-align: center;
-    padding: 50px;
-    background-color: #f5f5f5;
-}
-
-.home-page h1 {
+    padding: 70px;
+    background: linear-gradient(to right, #f5f5f5, #ddd);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    transition: all 0.3s ease;
+  }
+  
+  .home-page:hover {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  }
+  
+  .home-page h1 {
     color: #333;
-    font-size: 2.5em;
-}
-
-.home-page h2 {
+    font-size: 3em;
+    text-transform: uppercase;
+    font-family: 'Arial', sans-serif;
+    animation: fadeIn 2s;
+  }
+  
+  .home-page h2 {
     color: #666;
-    font-size: 2em;
-}
-
-.home-page p {
+    font-size: 2.5em;
+    font-family: 'Verdana', sans-serif;
+    animation: fadeIn 2s;
+  }
+  
+  .home-page p {
     color: #999;
-    font-size: 1.5em;
-}
+    font-size: 1.8em;
+    font-family: 'Verdana', sans-serif;
+    animation: fadeIn 2s;
+  }
+  
+  .button {
+    display: inline-block;
+    padding: 15px 25px;
+    margin: 5px;
+    color: #fff;
+    background-color: #007bff;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    font-size: 1.1em;
+    font-weight: bold;
+  }
+  
+  .button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+  }
+  
+  @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+  }
