Ajustement du style de la barre de navigation et mise à jour du style pour que toutes les pages prennent toute la largeur de la page

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,42 +1,43 @@
 .navStyle {
-    background: #343a40; /* Noir clair pour la barre de navigation */
-    padding: 40px 30px; /* Augmentation du padding vertical pour agrandir la hauteur */
+    background: linear-gradient(to right, #4b6cb7, #182848); /* Dégradé de bleu */
+    padding: 20px 30px; /* Ajustement du padding */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.2); /* Ombre ajustée pour un meilleur contraste */
-    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3); /* Ombre plus prononcée */
+    border-radius: 10px; /* Bordures plus arrondies */
 }
 
 .linkStyle {
-    color: #f8f9fa; /* Couleur plus claire pour les liens, pour un contraste élevé */
+    color: #ffffff; /* Couleur blanche pour un contraste élevé */
     text-decoration: none;
     margin: 0 15px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px; /* Taille de police ajustée */
+    font-weight: 400; /* Poids de la police moins lourd */
     transition: color 0.3s, transform 0.2s;
 }
 
 .linkStyle:hover {
-    color: #ced4da; /* Gris clair au survol pour un contraste subtil */
-    transform: translateY(-2px);
+    color: #a8b2d1; /* Couleur plus douce au survol */
+    transform: translateY(-2px); /* Effet de lévitation */
 }
 
 .specialLinkStyle {
-    color: #f8f9fa; /* Couleur claire pour les liens spéciaux, pour un contraste élevé */
-    font-size: 20px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 2px solid #f8f9fa; /* Bordure claire pour un effet intégré */
-    background-color: #495057; /* Fond noir moyen pour distinguer le lien spécial */
-    transition: transform 0.3s, background-color 0.3s;
+    color: #ffffff; /* Couleur blanche pour un contraste élevé */
+    font-size: 18px; /* Taille de police légèrement augmentée */
+    padding: 10px 20px; /* Padding horizontal augmenté */
+    border-radius: 20px; /* Bordures plus arrondies */
+    border: 2px solid #ffffff; /* Bordure blanche */
+    background-color: transparent; /* Fond transparent */
+    transition: transform 0.3s, background-color 0.3s, color 0.3s;
 }
 
 .specialLinkStyle:hover {
-    transform: scale(1.05);
-    background-color: #6c757d; /* Gris moyen plus clair au survol */
+    transform: scale(1.1); /* Légère augmentation de taille */
+    background-color: #4b6cb7; /* Changement de couleur de fond au survol */
+    color: #182848; /* Changement de couleur de texte au survol */
 }
 
 .specialLinkStyleMargin {
-    margin-right: 20px; /* Ajoute une marge à droite */
+    margin-right: 20px; /* Marge à droite */
 }
