Ajout d'une marge supérieure au `.container` pour espacer de la navbar

--- a/src/styles/CreateUser.module.css
+++ b/src/styles/CreateUser.module.css
@@ -9,6 +9,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     margin: auto;
+    margin-top: 30px; 
 }
 
 .form {
@@ -16,6 +17,8 @@
     flex-direction: column;
     gap: 15px;
     width: 100%;
+    margin-bottom: 100px;
+     /* Ajoute une marge en bas */
 }
 
 .input {
