Ajout d'un indicateur rouge pour les nouvelles notifications et mise en place des actions pour marquer comme lu ou supprimer les notifications
- Ajout d'un badge rouge pour mettre en évidence les nouvelles notifications dans NotificationsUtilisateur.jsx.
- Implémentation de la fonctionnalité pour marquer les notifications comme lues avec un bouton "Marquer comme lu".
- Implémentation de la fonctionnalité pour supprimer les notifications avec un bouton "Supprimer".
- Mise à jour des styles et des composants pour assurer un affichage correct et une interaction optimale avec les notifications.

--- a/src/styles/NotificationsUtilisateur.css
+++ b/src/styles/NotificationsUtilisateur.css
@@ -20,3 +20,63 @@
     font-style: italic;
     color: #666;
 }
+
+.notifications-container {
+    padding: 20px;
+  }
+  
+  .notification {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+  
+  .new-notification-badge {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .notification.new {
+    background-color: #e6f7ff;
+  }
+  
+  .btn {
+    margin-top: 20px;
+  }
+  
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .pagination button {
+    background-color: #007bff;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  
+  .pagination button.active {
+    background-color: #0056b3;
+  }
+  
+  .pagination button:hover {
+    background-color: #0056b3;
+  }
+  
+  .btn-danger {
+    background-color: #dc3545;
+    color: white;
+    padding: 10px 16px; /* Ajustez la taille du padding selon votre préférence */
+    border-radius: 4px;
+  }
+  
+  .btn-danger:hover {
+    background-color: #c82333;
+  }
+  
