--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -41,3 +41,13 @@
 .specialLinkStyleMargin {
     margin-right: 20px; /* Marge à droite */
 }
+
+.notificationBadge {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 0.2em 0.5em;
+    margin-left: 0.5em;
+    font-size: 0.8em;
+  }
+  
